syntax = "proto3";

package ordinals;

message OutPoint {
  bytes hash = 1;
  uint32 vout = 2;
}

message SatRange {
  uint64 start = 1;
  uint64 distance = 2;
}

message SatRanges {
  repeated SatRange ranges = 1;
}

message SatRangesRequest {
  OutPoint outpoint = 1;
}

message SatRangesResponse {
  SatRanges satranges = 1;
}

message SatRequest {
  uint64 sat = 1;
}

message SatResponse {
  uint64 pointer = 1;
  SatRange satrange = 2;
  OutPoint outpoint = 3;
  SatRanges satranges = 4;
}
